cli/tests/lit/auth-redirect.lit
# SPDX-FileCopyrightText: © 2021-2022 ChiselStrike <info@chiselstrike.com>

# RUN: sh -e @file

cd "$TEMPDIR"

$CURL $CHISELD_HOST/__chiselstrike/auth/callback?user=a
# CHECK: HTTP/1.1 307 Temporary Redirect
# CHECK: location: http://localhost:3000/profile?chiselstrike_token=

$CURL $CHISELD_HOST/__chiselstrike/auth/callback
# CHECK: HTTP/1.1 400 Bad Request
# CHECK: Callback error: parameter missing

$CURL $CHISELD_HOST/__chiselstrike/auth/callback/
# CHECK: HTTP/1.1 400 Bad Request
# CHECK: Callback error: parameter missing

$CURL $CHISELD_HOST/__chiselstrike/auth/callback/foo
# CHECK: HTTP/1.1 400 Bad Request
# CHECK: Callback error: parameter missing

$CURL $CHISELD_HOST/__chiselstrike/auth/callback?user=
# CHECK: HTTP/1.1 400 Bad Request
# CHECK: Callback error: parameter value empty

$CURL $CHISELD_HOST/__chiselstrike/auth/callback?username=
# CHECK: HTTP/1.1 400 Bad Request
# CHECK: Callback error: parameter value missing

# Reproduces #311
$CHISEL apply
$CURL $CHISELD_HOST/__chiselstrike/auth/callback?user=a
# CHECK: HTTP/1.1 307 Temporary Redirect
# CHECK: location: http://localhost:3000/profile?chiselstrike_token=
